<resources>
    <string name="app_name">DailyUp</string>
    <string name="enter_your_height_inches_and_weight_lbs_below">Enter your height (inches) and weight (lbs) below.</string>
    <string name="bmi_status">STATUS: </string>
    <string name="bmi">BMI:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="inches">Inches</string>
    <string name="pounds">Pounds</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="todo">TODO</string>
    <string name="title_activity_diet_planner">DietPlanner</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="extra">Use our workout planner and calorie calculator for more advice on how to get in better shape!</string>
    <string name="title_activity_bmi_graph">bmiGraph</string>
</resources>