<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bmi_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/calc"
        android:layout_width="78dp"
        android:layout_height="79dp"
        android:background="@drawable/calc2"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"/>

    <View
        android:id="@+id/height"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/height"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:layout_constraintEnd_toStartOf="@id/textView"
        android:layout_marginEnd="10dp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateIds,MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/weight"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/weight"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/height"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@color/purple"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="@id/line2"
        app:layout_constraintStart_toStartOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/textView2"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/purple"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI Calculator"
        android:textStyle="bold|italic"
        android:textSize="40sp"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/myRectangleView"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:text="@string/enter_your_height_inches_and_weight_lbs_below"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/myRectangleView" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/purple"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inches"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/line2"
        android:layout_marginStart="@dimen/default_gap"
        tools:ignore="LabelFor,MissingConstraints" />


    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/pounds"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/editTextHeight"
        app:layout_constraintBottom_toTopOf="@id/line"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/calc_btn"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:elevation="5dp"
        android:onClick="result_bmi"
        android:text="@string/calculate_bmi"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/line"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="@id/weight"
        app:layout_constraintEnd_toEndOf="@id/line"
        tools:targetApi="lollipop"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginBottom="@dimen/default_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/chart"
        app:layout_constraintTop_toTopOf="@id/chart"/>


</androidx.constraintlayout.widget.ConstraintLayout>